# profiles

./: .gitignore  Cargo.toml  README.md  adapter.ts  agent-profiles.dna  authorAdapter.ts  dna.js  index.ts  package-lock.json  package.json  profileExpressionUI.ts  rollup.config.icons.js
hc-dna/: Cargo.toml  default.nix
hc-dna/workdir/: agent-profiles.dna
hc-dna/zomes/did-profiles/: Cargo.toml
hc-dna/zomes/did-profiles/src/: input.rs  lib.rs  output.rs  profile.rs  utils.rs
hc-dna/zomes/tests/: did-document.ts  did-test.ts  package-lock.json  package.json
workdir/: dna.yaml
zome/: Cargo.toml
zome/profiles.dna.workdir/: dna.json
zome/tests/: package-lock.json  package.json
zome/tests/src/: did-document.ts  did-test.ts
zome/zomes/did-profiles/: Cargo.toml
zome/zomes/did-profiles/src/: did_validation.rs  lib.rs  profile.rs  utils.rs
zome/zomes/profiles/src/: profile.rs
zomes/did-profiles/: Cargo.toml
zomes/did-profiles/src/: did_validation.rs  lib.rs  output.rs  profile.rs
zomes/tests/: did-test.ts  package.json
zomes/tests/src/: did-test.ts  index.ts
