[package]
name = "did_profiles"
version = "0.1.0"
authors = ["jdeepee <joshuadparkin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "did_profiles"

[dependencies]
did_doc = { git = "https://github.com/dhuseby/did" }
derive_more = "0"
serde = "1"
libsecp256k1 = "0.3.5"
ed25519-dalek = "1.0.1"
hex = "0.4.2"
bs58 = "0.4.0"

hdk = "0.0.100"
hc_utils = {git = "https://github.com/holochain/hc-utils", branch = "develop"}